[tool.poetry]
name = "dash-extensions-docs"
version = "0.0.1"
description = ""
authors = ["emher <emil.h.eriksen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
dash = "2.9.3"
dash-extensions = "1.0.4"
dash-mantine-components = "0.12.1"
dash-iconify = "^0.1.2"
mistune = "2.0.4"
pytest = "^7.1.1"
coverage = "^6.3.2"
dash-down = "0.1.1"
uvicorn = "^0.18.2"
starlette = "^0.20.4"
sse-starlette = "^0.10.3"
pandas = ">=1.1.5"
XlsxWriter = "^3.0.3"
kaleido = "0.2.1"
quart = "^0.17.0"
gunicorn = "^20.1.0"
toml = "^0.10.2"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
