[project]
name = "dash-extensions-docs"
version = "0.0.1"
description = "Interactive documentation for dash-extensions."
authors = [
    { name = "emher", email = "emil.h.eriksen@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.2",
    "dash-extensions==2.0.1",
    "dash-mantine-components>=1.1.0",
    "dash-iconify>=0.1.2",
    "dash-down>=0.2.0",
    "XlsxWriter>=3.0.3",
    "kaleido>=1.0.0rc11",
    "gunicorn>=20.1.0",
    "requests>=2.28.1",
    "fastapi>=0.111.0",
    "pandas"
]

[project.urls]
homepage = "https://github.com/emilhe/dash-extensions-docs"
repository = "https://github.com/emilhe/dash-extensions-docs"

[tool.ruff]
line-length = 120
target-version = "py313"
